k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  namespace: mlops-fraud
  labels:
    app: fraud-detection-service
spec:
  selector:
    app: fraud-detection-service
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
